--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
     <meta property="og:title" content="Monokuma PFP Maker" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://PFP.MonokumaBSC.io" />
+    <meta property="og:url" content="https://MonokumaBSC.io" />
     <meta property="og:description" content="Best Collection Of Monokuma PFP" />
     <meta property="og:image" content="<%= BASE_URL %>foo.png" />
     <meta name="msapplication-TileColor" content="#ffffff">
@@ -36,13 +36,9 @@
     <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
     <title>Monokuma PFP maker</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=<%= VUE_APP_ANALYTICS %>"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', '<%= VUE_APP_ANALYTICS %>', { 'anonymize_ip': true });
     </script>
   </head>
   <body style="background-image: url(background.jpg); background-size:cover">
